# python-watcherclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: api_v1.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  openstack_cli.rst
doc/source/api/: autoindex.rst  watcherclient.client.rst  watcherclient.common.apiclient.auth.rst  watcherclient.common.apiclient.base.rst  watcherclient.common.apiclient.client.rst  watcherclient.common.apiclient.exceptions.rst  watcherclient.common.apiclient.utils.rst  watcherclient.common.base.rst  watcherclient.common.cliutils.rst  watcherclient.common.http.rst  watcherclient.common.i18n.rst  watcherclient.common.utils.rst  watcherclient.exceptions.rst  watcherclient.shell.rst  watcherclient.tests.keystone_client_fixtures.rst  watcherclient.tests.test_client.rst  watcherclient.tests.test_http.rst  watcherclient.tests.test_import.rst  watcherclient.tests.test_shell.rst  watcherclient.tests.test_utils.rst  watcherclient.tests.utils.rst  watcherclient.tests.v1.test_action.rst  watcherclient.tests.v1.test_action_plan.rst  watcherclient.tests.v1.test_action_plan_shell.rst  watcherclient.tests.v1.test_action_shell.rst  watcherclient.tests.v1.test_audit.rst  watcherclient.tests.v1.test_audit_shell.rst  watcherclient.tests.v1.test_audit_template.rst  watcherclient.tests.v1.test_audit_template_shell.rst  watcherclient.tests.v1.test_goal.rst  watcherclient.tests.v1.test_goal_shell.rst  watcherclient.tests.v1.test_metric_collector.rst  watcherclient.tests.v1.test_metric_collector_shell.rst  watcherclient.v1.action.rst  watcherclient.v1.action_plan.rst  watcherclient.v1.action_plan_shell.rst  watcherclient.v1.action_shell.rst  watcherclient.v1.audit.rst  watcherclient.v1.audit_shell.rst  watcherclient.v1.audit_template.rst  (+9 more)
doc/source/cli/: details.rst  index.rst  openstack_cli.rst  watcher.rst
doc/source/reference/: api_v1.rst  index.rst
releasenotes/notes/: add-action-update-command-b8c74d5e6f234a21.yaml  drop-py-2-7-f7078b44cf99cae1.yaml  drop-py39-8a9c99678b3e8eeb.yaml
tools/: watcher.bash_completion
watcherclient/: __init__.py  _i18n.py  client.py  config.py  exceptions.py  plugin.py  shell.py  version.py  watcher.py
watcherclient/common/: api_versioning.py  base.py  cliutils.py  command.py  http.py  httpclient.py  i18n.py  utils.py
watcherclient/common/apiclient/: base.py  exceptions.py
watcherclient/locale/: watcherclient.pot
watcherclient/locale/fr/LC_MESSAGES/: watcherclient.po
watcherclient/openstack/common/: _i18n.py  cliutils.py  gettextutils.py  importutils.py  strutils.py
watcherclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
watcherclient/osc/: plugin.py
watcherclient/tests/: README.rst  keystone_client_fixtures.py  test_client.py  test_http.py  test_import.py  test_shell.py  test_utils.py  utils.py
watcherclient/tests/client_functional/v1/: base.py  test_action.py  test_action_plan.py  test_audit.py  test_audit_template.py  test_goal.py  test_scoring_engine.py  test_service.py  test_strategy.py
watcherclient/tests/common/: test_api_versioning.py
watcherclient/tests/functional/: plugin.py
watcherclient/tests/functional/hooks/: post_test_hook.sh
watcherclient/tests/functional/v1/: base.py  test_action.py  test_action_plan.py  test_audit.py  test_audit_template.py  test_goal.py  test_scoring_engine.py  test_service.py  test_strategy.py
watcherclient/tests/unit/: keystone_client_fixtures.py  test_client.py  test_import.py  test_utils.py  utils.py
watcherclient/tests/unit/common/: test_api_versioning.py
watcherclient/tests/unit/v1/: base.py  test_action.py  test_action_plan.py  test_action_plan_shell.py  test_action_shell.py  test_audit.py  test_audit_shell.py  test_audit_template.py  test_audit_template_shell.py  test_data_model.py  test_data_model_shell.py  test_goal.py  test_goal_shell.py  test_scoring_engine.py  test_scoring_engine_shell.py  test_service.py  test_service_shell.py  test_strategy.py  test_strategy_shell.py
watcherclient/tests/v1/: base.py  test_action.py  test_action_plan.py  test_action_plan_shell.py  test_action_shell.py  test_audit.py  test_audit_shell.py  test_audit_template.py  test_audit_template_shell.py  test_goal.py  test_goal_shell.py  test_metric_collector.py  test_metric_collector_shell.py  test_scoring_engine.py  test_scoring_engine_shell.py  test_service.py  test_service_shell.py  test_strategy.py  test_strategy_shell.py
watcherclient/tests/v1/osc/: base.py  test_action_plan_shell.py  test_action_shell.py  test_audit_shell.py  test_audit_template_shell.py  test_goal_shell.py  test_strategy_shell.py
watcherclient/v1/: __init__.py  action.py  action_plan.py  action_plan_shell.py  action_shell.py  audit.py  audit_shell.py  audit_template.py  audit_template_shell.py  client.py  data_model.py  data_model_shell.py  goal.py  goal_shell.py  metric_collector.py  metric_collector_shell.py  resource_fields.py  scoring_engine.py  scoring_engine_shell.py  service.py  service_shell.py  shell.py  strategy.py  strategy_shell.py
watcherclient/v1/osc/: action_shell.py  audit_shell.py  audit_template_shell.py  strategy_shell.py
