[metadata]
name = python-watcherclient
summary = Python client library for Watcher API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    watcherclient

[entry_points]
console_scripts =
    watcher = watcherclient.shell:main

[pbr]
autodoc_index_modules = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = watcherclient/locale
domain = watcherclient

[update_catalog]
domain = watcherclient
output_dir = watcherclient/locale
input_file = watcherclient/locale/watcherclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = watcherclient/locale/watcherclient.pot