[metadata]
name = python-watcherclient
summary = Python client library for Watcher API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    watcherclient

[entry_points]
console_scripts =
    watcher = watcherclient.shell:main

openstack.cli.extension =
    infra_optim = watcherclient.plugin

# Entry points for the 'openstack' command
openstack.infra_optim.v1 =
    optimize_goal_show = watcherclient.v1.goal_shell:ShowGoal
    optimize_goal_list = watcherclient.v1.goal_shell:ListGoal

    optimize_strategy_show = watcherclient.v1.strategy_shell:ShowStrategy
    optimize_strategy_list = watcherclient.v1.strategy_shell:ListStrategy

    optimize_audittemplate_show = watcherclient.v1.audit_template_shell:ShowAuditTemplate
    optimize_audittemplate_list = watcherclient.v1.audit_template_shell:ListAuditTemplate
    optimize_audittemplate_create = watcherclient.v1.audit_template_shell:CreateAuditTemplate
    optimize_audittemplate_update = watcherclient.v1.audit_template_shell:UpdateAuditTemplate
    optimize_audittemplate_delete = watcherclient.v1.audit_template_shell:DeleteAuditTemplate

    optimize_audit_show = watcherclient.v1.audit_shell:ShowAudit
    optimize_audit_list = watcherclient.v1.audit_shell:ListAudit
    optimize_audit_create = watcherclient.v1.audit_shell:CreateAudit
    optimize_audit_update = watcherclient.v1.audit_shell:UpdateAudit
    optimize_audit_delete = watcherclient.v1.audit_shell:DeleteAudit

    optimize_actionplan_show = watcherclient.v1.action_plan_shell:ShowActionPlan
    optimize_actionplan_list = watcherclient.v1.action_plan_shell:ListActionPlan
    optimize_actionplan_create = watcherclient.v1.action_plan_shell:CreateActionPlan
    optimize_actionplan_update = watcherclient.v1.action_plan_shell:UpdateActionPlan
    optimize_actionplan_start = watcherclient.v1.action_plan_shell:StartActionPlan

    optimize_action_show = watcherclient.v1.action_shell:ShowAction
    optimize_action_list = watcherclient.v1.action_shell:ListAction

    optimize_scoringengine_show = watcherclient.v1.scoring_engine_shell:ShowScoringEngine
    optimize_scoringengine_list = watcherclient.v1.scoring_engine_shell:ListScoringEngine

# The same as above but used by the 'watcher' command
watcherclient.v1 =
    goal_show = watcherclient.v1.goal_shell:ShowGoal
    goal_list = watcherclient.v1.goal_shell:ListGoal

    strategy_show = watcherclient.v1.strategy_shell:ShowStrategy
    strategy_list = watcherclient.v1.strategy_shell:ListStrategy

    audittemplate_show = watcherclient.v1.audit_template_shell:ShowAuditTemplate
    audittemplate_list = watcherclient.v1.audit_template_shell:ListAuditTemplate
    audittemplate_create = watcherclient.v1.audit_template_shell:CreateAuditTemplate
    audittemplate_update = watcherclient.v1.audit_template_shell:UpdateAuditTemplate
    audittemplate_delete = watcherclient.v1.audit_template_shell:DeleteAuditTemplate

    audit_show = watcherclient.v1.audit_shell:ShowAudit
    audit_list = watcherclient.v1.audit_shell:ListAudit
    audit_create = watcherclient.v1.audit_shell:CreateAudit
    audit_update = watcherclient.v1.audit_shell:UpdateAudit
    audit_delete = watcherclient.v1.audit_shell:DeleteAudit

    actionplan_show = watcherclient.v1.action_plan_shell:ShowActionPlan
    actionplan_list = watcherclient.v1.action_plan_shell:ListActionPlan
    actionplan_create = watcherclient.v1.action_plan_shell:CreateActionPlan
    actionplan_update = watcherclient.v1.action_plan_shell:UpdateActionPlan
    actionplan_start = watcherclient.v1.action_plan_shell:StartActionPlan
    actionplan_delete = watcherclient.v1.action_plan_shell:DeleteActionPlan

    action_show = watcherclient.v1.action_shell:ShowAction
    action_list = watcherclient.v1.action_shell:ListAction

    scoringengine_show = watcherclient.v1.scoring_engine_shell:ShowScoringEngine
    scoringengine_list = watcherclient.v1.scoring_engine_shell:ListScoringEngine

[pbr]
autodoc_index_modules = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = watcherclient/locale
domain = watcherclient

[update_catalog]
domain = watcherclient
output_dir = watcherclient/locale
input_file = watcherclient/locale/watcherclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext  _LI _LW _LE _LC
mapping_file = babel.cfg
output_file = watcherclient/locale/watcherclient.pot
